--- a/styles/ModificaMateria.css
+++ b/styles/ModificaMateria.css
@@ -39,7 +39,7 @@ footer{
     background-color:rgb(26, 26, 26);
     color: white;
     position: fixed;
-    padding-bottom: 50px;
+    padding: 10px 0;
     bottom: 0;
     width: 100%;
     p{
