--- a/styles/TodasMaterias.css
+++ b/styles/TodasMaterias.css
@@ -41,7 +41,7 @@ footer{
     position: relative;
     bottom: 0;
     width: 100%;
-    padding-bottom: 50px;
+    padding: 10px 0;
     p{
         text-align: center;
     }
