--- a/styles/formulario_modifica_materia.css
+++ b/styles/formulario_modifica_materia.css
@@ -34,6 +34,7 @@ th {
     margin-top: 20px;
     display: flex;
     justify-content: center;
+    border-radius: 5px;
 }
 footer{
     background-color:rgb(26, 26, 26);
@@ -45,4 +46,9 @@ footer{
     p{
         text-align: center;
     }
+}
+#volver{
+    margin: 40px 0px 0px 50px;
+    padding: 3px;
+    border-radius: 5px;
 }
