--- a/styles/formulario_todas_materias.css
+++ b/styles/formulario_todas_materias.css
@@ -2,8 +2,12 @@ body{
     font-family: Verdana;
     margin: 0;
     padding: 0;
-    width: 100%;
-    height: 100%;
+    display: grid;
+    min-height: 100dvh;
+    grid-template-rows: auto 1fr auto;
+}
+header, main, footer {
+    grid-column: 1;
 }
 img{
     display: block;
